added --add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED to avoid "Illegal reflective access by com.formdev.flatlaf.ui.FlatFileChooserUI$FlatShortcutsPanel" under Windows